# internal/api/v1/response.go
@@ -1,0 +1,9 @@
+package v1
+
+type errorResponse struct {
+	Message string `json:"message"`
+}
+
+type statusResponse struct {
+	Status string `json:"status"`
+}
